--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Thomas M. King</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile-tk-bio.jpg" alt="">
       </span>
@@ -40,7 +40,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -54,7 +54,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li>-->
       </ul>
     </div>
   </nav>
@@ -68,12 +68,12 @@
         </h1>
         <div class="subheading mb-5">Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Designing user-friendly websites has always been my passion and hobby since my early childhood, which led me to pursue a career in this field. My past education and work experience have afforded me a well-rounded skill set, including first-rate analytical and problem-solving skills, as well as organizational communication and leadership qualities. </p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.behance.net/tomking3" target="_blank">
             <i class="fab fa-behance"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/thomasking48" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -81,7 +81,7 @@
     </section>
 
     <hr class="m-0">
-
+<!--
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
@@ -275,8 +275,9 @@
         </ul>
       </div>
     </section>
-
+-->
   </div>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
