--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#work">Work</a>
-        </li>
+        </li>-->
       </ul>
     </div>
   </nav>
@@ -285,7 +285,7 @@
    
 
   
-<!-- Portfolio Section -->
+<!-- Portfolio Section 
 <section id="work" class="portfolio-mf route">
     <div class="container">
       <div class="row">
