fixed spelling error

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 </section>
 </div>
     
-     <p class="text-center">**** I am always adding more projects to this list ****</p>
+     <p class="text-center">**** I am always adding projects to this list ****</p>
 <!-- Portfolio Section End --> 
 
 <!-- JavaScript Files -->
