changed Github icon

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <i class="fab fa-php"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GITHUB">
-            <i class="fab fa-git"></i>
+            <i class="fab fa-github"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="ADOBE CREATIVE SUITE">
             <i class="fab fa-adobe"></i>
