--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="css/resume.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159178532-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159178532-1');
+</script>
 
 </head>
 
