moved around websites

--- a/index.html
+++ b/index.html
@@ -346,6 +346,40 @@
 <div class="column websites">
  <div class="content work-box">
    <div class="work-img">
+      <a href="img/websites/parr-2.jpg" data-lightbox="websites">
+       <img src="img/websites/parr-2.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Parr Investments - Availability</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+     <a href="img/websites/crossnore-school.png" data-lightbox="websites">
+       <img src="img/websites/crossnore-school.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+   </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Crossnore School</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
       <a href="img/websites/health.jpg" data-lightbox="websites">
        <img src="img/websites/health.jpg" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
@@ -363,14 +397,116 @@
 <div class="column websites">
  <div class="content work-box">
    <div class="work-img">
-      <a href="img/websites/parr-2.jpg" data-lightbox="websites">
-       <img src="img/websites/parr-2.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      <a href="img/websites/homes.jpg" data-lightbox="websites">
+       <img src="img/websites/homes.jpg" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
       </div>
     <div class="work-content">
       <div class="row col-sm-12">
       <div class="resume-content">
-       <h4 class="resume-pre-tk">Parr Investments</h4>
+       <h4 class="resume-pre-tk">Carolina Custom Homes</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/raylen.jpg" data-lightbox="websites">
+       <img src="img/websites/raylen.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">RayLen Vineyards</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/alert.jpg" data-lightbox="websites">
+       <img src="img/websites/alert.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Savers Alert</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/bloomday.jpg" data-lightbox="websites">
+       <img src="img/websites/bloomday.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Bloomday Granite</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/d-stone.png" data-lightbox="websites">
+       <img src="img/websites/d-stone.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">D. Stone Builders</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/elite.jpg" data-lightbox="websites">
+       <img src="img/websites/elite.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Elite Clean</h4>
+       <p class="resume-tk">websites</p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="column websites">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/websites/endura.jpg" data-lightbox="websites">
+       <img src="img/websites/endura.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+    <div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Endura Products</h4>
        <p class="resume-tk">websites</p>
       </div>
       </div>
@@ -431,23 +567,6 @@
 <div class="column websites">
  <div class="content work-box">
    <div class="work-img">
-      <a href="img/websites/alert.jpg" data-lightbox="websites">
-       <img src="img/websites/alert.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">Savers Alert</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
       <a href="img/websites/baydays.png" data-lightbox="websites">
        <img src="img/websites/baydays.png" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
@@ -456,23 +575,6 @@
       <div class="row col-sm-12">
       <div class="resume-content">
        <h4 class="resume-pre-tk">BayDays</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
-      <a href="img/websites/bloomday.jpg" data-lightbox="websites">
-       <img src="img/websites/bloomday.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">Bloomday</h4>
        <p class="resume-tk">websites</p>
       </div>
       </div>
@@ -669,23 +771,6 @@
 <div class="column websites">
  <div class="content work-box">
    <div class="work-img">
-      <a href="img/websites/d-stone.png" data-lightbox="websites">
-       <img src="img/websites/d-stone.png" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">D. Stone Builders</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
       <a href="img/websites/ddpaving.png" data-lightbox="websites">
        <img src="img/websites/ddpaving.png" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
@@ -711,40 +796,6 @@
       <div class="row col-sm-12">
       <div class="resume-content">
        <h4 class="resume-pre-tk">Virginia Ducks</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
-      <a href="img/websites/elite.jpg" data-lightbox="websites">
-       <img src="img/websites/elite.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">Elite Clean</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
-      <a href="img/websites/endura.jpg" data-lightbox="websites">
-       <img src="img/websites/endura.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">Endura Products</h4>
        <p class="resume-tk">websites</p>
       </div>
       </div>
@@ -796,23 +847,6 @@
       <div class="row col-sm-12">
       <div class="resume-content">
        <h4 class="resume-pre-tk">Hip Helpers</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
-      <a href="img/websites/homes.jpg" data-lightbox="websites">
-       <img src="img/websites/homes.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">Carolina Custom Homes</h4>
        <p class="resume-tk">websites</p>
       </div>
       </div>
@@ -1051,23 +1085,6 @@
       <div class="row col-sm-12">
       <div class="resume-content">
        <h4 class="resume-pre-tk">Pankoke Marine Co.</h4>
-       <p class="resume-tk">websites</p>
-      </div>
-      </div>
-     </div>
-   </div>
-</div>
-<div class="column websites">
- <div class="content work-box">
-   <div class="work-img">
-      <a href="img/websites/raylen.jpg" data-lightbox="websites">
-       <img src="img/websites/raylen.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
-    <div class="work-content">
-      <div class="row col-sm-12">
-      <div class="resume-content">
-       <h4 class="resume-pre-tk">RayLen Vineyards</h4>
        <p class="resume-tk">websites</p>
       </div>
       </div>
