--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Tom-K-bio.jpg" alt="Thomas M. King Profile picture">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-    </button>
+      
+    <!-- Nav for mobile -->
+       <button class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+           <span class="navbar-toggler-icon"></span>
+           <span class="navbar-toggler-icon"></span>
+            <div class="close-icon py-1">✖</div>
+        </button>
+      
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
