--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
   <div class="container-fluid p-0">
       
       
-
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Thomas M.
@@ -368,12 +366,20 @@
 
 <!-- wesites -->
 <div class="column websites">
- <div class="content work-box">
+ <div class="content">
    <div class="work-img">
-      <a href="img/websites/door.jpg" data-lightbox="websites">
-       <img src="img/websites/door.jpg" alt="Portfolio - Thomas King" class="img-fluid">
-      </a>
-      </div>
+<a href="img/websites/door.jpg" data-lightbox="websites">
+    <div class="et_pb_module et_pb_text website-1 slippery et_pb_text_align_center et_pb_bg_layout_light"></div>
+    <style>.website-1 {
+      background-image: url(img/websites/Bdoor-Thomas-King-1.jpg);
+      padding-top: 200px!important;
+      transition: background-position 2.5s ease-out 0.5s;
+      background-position: top center;
+      background-size: 100% auto!important;
+      height: 100%;
+    }</style>
+    </a>
+   </div>
     <div class="work-content">
       <div class="row">
            <div class="col-sm-6">
@@ -2961,6 +2967,10 @@
 <!-- Return to Top -->
 <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 <style>
+.slippery:hover {
+      background-position: bottom center!important;
+      transition: background-position 10s linear 0s;
+}
 #return-to-top {
     position: fixed;
     bottom: 20px;
