changed Parr Availability image

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 <div class="column websites">
  <div class="content">
    <div class="work-img">
-<a href="img/websites/door.jpg" data-lightbox="websites">
+  <a href="img/websites/door.jpg" data-lightbox="websites">
     <div class="et_pb_module et_pb_text website-1 slippery et_pb_text_align_center et_pb_bg_layout_light"></div>
     <style>.website-1 {
       background-image: url(img/websites/Bdoor-Thomas-King-1.jpg);
@@ -398,8 +398,16 @@
 <div class="column websites">
  <div class="content work-box">
    <div class="work-img">
-      <a href="img/websites/parr-2.jpg" data-lightbox="websites">
-       <img src="img/websites/parr-2.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+    <a href="img/websites/parr-2.jpg" data-lightbox="websites">
+      <div class="et_pb_module et_pb_text website-2 slippery et_pb_text_align_center et_pb_bg_layout_light"></div>
+      <style>.website-2 {
+        background-image: url(img/websites/Availability.jpg);
+        padding-top: 200px!important;
+        transition: background-position 2.5s ease-out 0.5s;
+        background-position: top center;
+        background-size: 100% auto!important;
+        height: 100%;
+      }</style>
       </a>
       </div>
     <div class="work-content">
