--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 
   gtag('config', 'UA-159178532-1');
 </script>
+
+<!-- Hotjar Tracking Code for https://thomasking48.github.io/portfolio/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:1781812,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
     
 </head>
 
