--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h1 class="mb-0">Thomas M.
           <span class="text-primary">King</span>
         </h1>
-        <!--<div class="subheading mb-5">Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>-->
+        <div class="subheading mb-5"><!--Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>-->
         </div>
         <p class="lead mb-5">Designing user-friendly websites has always been my passion and hobby since my early childhood, which led me to pursue a career in this field. My past education and work experience have afforded me a well-rounded skill set, including first-rate analytical and problem-solving skills, as well as organizational communication and leadership qualities. </p>
         <div class="social-icons">
