--- a/index.html
+++ b/index.html
@@ -123,6 +123,25 @@
           </div>
         </div>
 
+    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
+            <div class="subheading mb-3">Anitian</div>
+              <ul>
+                  <li>Worked closely with CMO to re-brand Anitian from the ground up
+                  <li>Created PowerPoint decks for Executive & Board meetings as well as a deck which secured Series B financing for Anitian</li>
+                  <li>Launched all-new product branding</li>
+                  <li>Built website, including all-new mega menu, product pages, banners, dynamic resource library</li>
+                  <li>Built infographics and graphics for blog posts</li>
+                  <li>Branded Partner Program including logo, webpage, and brochure</li>
+                  <li>Branded Security on Cloud podcast</li>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 – February 2020</span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Front-End Developer</h3>
