--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
+            <div class="subheading mb-3">Anitian</div>
+              <ul>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2020 – June 2022</span>
+          </div>
+        </div>       
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Front-End Developer</h3>
             <div class="subheading mb-3">Mittun (Contractor)</div>
               <ul>
