--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+        
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
+            <div class="subheading mb-3">Anitian</div>
+              <ul>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2020 – June 2022</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
