added Anitian list items

--- a/index.html
+++ b/index.html
@@ -114,9 +114,16 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
-            <div class="subheading mb-3">Anitian</div>
+            <div class="subheading mb-3">Anitian, Inc.</div>
               <ul>
-                <li></li>
+                  <li>Worked closely with CMO to rebrand from the ground up
+                  <li>Created PowerPoint decks for Executive & Board meetings as well as a deck which secured Series B financing</li>
+                  <li>Launched all-new product branding</li>
+                  <li>Built website, including all-new mega menu, product pages, banners, dynamic resource library</li>
+                  <li>Built infographics and graphics for blog posts</li>
+                  <li>Branded Partner Program including logo, webpage, and brochure</li>
+                  <li>Branded Security on Cloud podcast</li>
+                  <li>Designed business cards, trade show booths, and collateral for events</li>
               </ul>
           </div>
           <div class="resume-date text-md-right">
