--- a/index.html
+++ b/index.html
@@ -110,8 +110,28 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+          
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Webmaster & Sr. Digital Design Manager</h3>
+            <div class="subheading mb-3">Phosphorus Cybersecurity</div>
+              <ul>
+                  <li>Collaborated closely with the CMO to rebrand the company</li>
+                  <li>Created PowerPoint decks for Executive meetings, Investor calls, Board of Directors meetings, and Sales pitch decks. Created custom slides daily for executives and sales reps.</li>
+                  <li>Designed and developed a company website, including mega menu, product pages, company pages, banners, and a dynamic Resource Center and Global Device Network.</li>
+                  <li>Created infographics and graphics for blog posts</li>
+                  <li>Developed branding for Partner Program, including logo, webpage, and brochure</li>
+                  <li>Branded and designed assets for a new company podcast</li>
+                  <li>Designed sales plays, competitive matrix, competitive flashes, and other sales collateral</li>
+                  <li>Designed business cards, trade show booths, and event collateral</li>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2022 – December 2024</span>
+          </div>
+        </div>
         
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
             <div class="subheading mb-3">Anitian, Inc.</div>
@@ -128,25 +148,6 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2020 – June 2022</span>
-          </div>
-        </div>
-
-    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
-            <div class="subheading mb-3"> Anitian </div>
-              <ul>
-                  <li>Worked closely with CMO to re-brand Anitian from the ground up
-                  <li>Created PowerPoint decks for Executive & Board meetings as well as a deck which secured Series B financing for Anitian</li>
-                  <li>Launched all-new product branding</li>
-                  <li>Built website, including all-new mega menu, product pages, banners, dynamic resource library</li>
-                  <li>Built infographics and graphics for blog posts</li>
-                  <li>Branded Partner Program including logo, webpage, and brochure</li>
-                  <li>Branded Security on Cloud podcast</li>
-              </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 – February 2020</span>
           </div>
         </div>
 
