--- a/index.html
+++ b/index.html
@@ -308,14 +308,8 @@
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="JAVASCRIPT">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="node.js">
-            <i class="fab fa-node-js"></i>
-          </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="SASS">
             <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GULP">
-            <i class="fab fa-gulp"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="PHP">
             <i class="fab fa-php"></i>
@@ -331,8 +325,12 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Skills</div>
         <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Adobe Creative Suite, including Illustrator, Indesign, and Photoshop</li>
+          <li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Mobile-First, Responsive Design</li>
@@ -344,7 +342,7 @@
             Front and back-end web development</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            6+ years of experience developing WordPress and custom HTML websites</li>
+            10+ years of experience developing WordPress, custom HTML websites, and graphic design</li>
         </ul>
       </div>
     </section>
