--- a/index.html
+++ b/index.html
@@ -1674,15 +1674,15 @@
 <div class="column presentations">
  <div class="content work-box">
    <div class="work-img">
-      <a href="img/cards/jim-christopher.jpg" data-lightbox="presentations">
-       <img src="img/cards/jim-christopher.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+      <a href="img/presentations/Anitian_Brand_Guidelines.png" data-lightbox="presentations">
+       <img src="img/presentations/Anitian_Brand_Guidelines.png" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
       </div>
 <div class="work-content">
       <div class="row col-sm-12">
       <div class="resume-content">
-       <h4 class="resume-pre-tk">TEST</h4>
-       <p class="resume-tk"><script>document.write(filter2);</script></p>
+       <h4 class="resume-pre-tk">Anitian Brand Guidelines</h4>
+       <p class="resume-tk"><script>document.write(filter6);</script></p>
       </div>
       </div>
      </div>
