--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </h1>
         <div class="subheading mb-5"><!--Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>-->
         </div>
-        <p class="lead mb-5">Designing user-friendly websites has always been my passion and hobby since my early childhood, which led me to pursue a career in this field. My past education and work experience have afforded me a well-rounded skill set, including first-rate analytical and problem-solving skills, as well as organizational communication and leadership qualities. </p>
+        <p class="lead mb-5">Designing user-friendly websites and presentations that captivate and inspire has always been my passion and hobby since my early childhood, which led me to pursue a career in this field. My past education and work experience have afforded me a well-rounded skill set, including first-rate analytical and problem-solving skills, as well as organizational communication and leadership qualities. </p>
         <div class="social-icons">
           <a href="https://www.behance.net/tomking3" target="_blank">
             <i class="fab fa-behance"></i>
@@ -1682,6 +1682,24 @@
       <div class="row col-sm-12">
       <div class="resume-content">
        <h4 class="resume-pre-tk">Anitian Brand Guidelines</h4>
+       <p class="resume-tk"><script>document.write(filter6);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div> 
+    
+<div class="column presentations">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/presentations/Phosphorus_Brand_Guidelines.png" data-lightbox="presentations">
+       <img src="img/presentations/Phosphorus_Brand_Guidelines.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Phosphorus Brand Guidelines</h4>
        <p class="resume-tk"><script>document.write(filter6);</script></p>
       </div>
       </div>
