--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,12 @@
      </div>
    </div>
 </div>
-  
+
+<style>
+.d-flex {
+    display: block !important;
+}
+</style>  
     
 <!-- presentations -->
 <div class="column presentations">
