--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
         <div class="subheading mb-5"><!--Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>-->
         </div>
         <p class="lead mb-5">Designing user-friendly websites and presentations that captivate and inspire has always been my passion and hobby since my early childhood, which led me to pursue a career in this field. My past education and work experience have afforded me a well-rounded skill set, including first-rate analytical and problem-solving skills, as well as organizational communication and leadership qualities. </p>
+        
         <div class="social-icons">
+          <a href="https://www.linkedin.com/in/thomas-king-224281340/" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
           <a href="https://www.behance.net/tomking3" target="_blank">
             <i class="fab fa-behance"></i>
           </a>
@@ -102,6 +106,7 @@
             <i class="fab fa-github"></i>
           </a>
         </div>
+
       </div>
     </section>
 
