--- a/index.html
+++ b/index.html
@@ -1717,6 +1717,24 @@
    </div>
 </div> 
     
+<div class="column presentations">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/presentations/Phosphorus_Sales-Playbook.png" data-lightbox="presentations">
+       <img src="img/presentations/Phosphorus_Sales-Playbook.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Phosphorus Sales Playbook</h4>
+       <p class="resume-tk"><script>document.write(filter6);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div> 
+    
 
 <!-- cards -->
 <div class="column cards">
