--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="robots" content="noindex">
 
   <title>Thomas Michael King - Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
   <!-- CSS Files -->
   <link href="css/style.css" rel="stylesheet">
