Squashed commit of the following:
commit 7ed936d60011e25b52af08d3604a5741dccaf171
Author: Tom King <50848957+thomasmking48@users.noreply.github.com>
Date:   Fri Dec 13 13:16:05 2024 -0500

    Added Anitian

--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Webmaster & Digital Design Manager</h3>
+            <div class="subheading mb-3">Anitian</div>
+              <ul>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2020 – June 2022</span>
+          </div>
+        </div>       
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Front-End Developer</h3>
             <div class="subheading mb-3">Mittun (Contractor)</div>
               <ul>
@@ -1754,7 +1766,24 @@
    </div>
 </div> 
     
-    
+<div class="column presentations">
+ <div class="content work-box">
+   <div class="work-img">
+      <a href="img/presentations/Phosphorus_Sales_Pitch.png" data-lightbox="presentations">
+       <img src="img/presentations/Phosphorus_Sales_Pitch.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Phosphorus Sales Pitch</h4>
+       <p class="resume-tk"><script>document.write(filter6);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div> 
+
 
 <!-- cards -->
 <div class="column cards">
