--- a/index.html
+++ b/index.html
@@ -2009,6 +2009,24 @@
 <div class="column flyers">
  <div class="content work-box">
    <div class="work-img">
+     <a href="img/flyers/Phosphorus-Handout.png" data-lightbox="flyers">
+       <img src="img/flyers/Phosphorus-Handout.png" alt="Portfolio - Thomas King" class="img-fluid">
+     </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Phosphorus</h4>
+       <p class="resume-tk"><script>document.write(filter3);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>  
+    
+<div class="column flyers">
+ <div class="content work-box">
+   <div class="work-img">
      <a href="img/flyers/Phosphorus-Enter-to-Win-Flyer.png" data-lightbox="flyers">
        <img src="img/flyers/Phosphorus-Enter-to-Win-Flyer.png" alt="Portfolio - Thomas King" class="img-fluid">
      </a>
@@ -2016,7 +2034,7 @@
 <div class="work-content">
       <div class="row col-sm-12">
       <div class="resume-content">
-       <h4 class="resume-pre-tk">Phosphorus Enter to Win Flyer</h4>
+       <h4 class="resume-pre-tk">Phosphorus</h4>
        <p class="resume-tk"><script>document.write(filter3);</script></p>
       </div>
       </div>
