--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </h1>
         <div class="subheading mb-5"><!--Kernersville NC, 27284 · <a href="mailto:ThomasMKing48@gmail.com">ThomasMKing48@gmail.com</a>-->
         </div>
-        <p class="lead mb-5">Throughout my life, I have harbored a profound passion for designing user-friendly websites and presentations that captivate and inspire audiences. This passion has propelled me to embark on a career in this domain. My educational background and professional experience have cultivated a comprehensive skill set, including exceptional analytical and problem-solving abilities, as well as robust organizational communication and leadership skills.</p>
+        <p class="lead mb-5">Throughout my life, I have cultivated a deep passion for designing user-friendly websites and presentations that captivate and inspire audiences. This passion has driven me to pursue a career in this field. My educational background and professional experience have honed a diverse skill set, including analytical and problem-solving abilities, a strong work ethic and independence, and exceptional drive and self-reliance to ensure timely completion of tasks.</p>
         <br><br>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/thomas-king-224281340/" target="_blank">
