--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159178532-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPTMLP4SVR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-159178532-1');
+  gtag('config', 'G-XPTMLP4SVR');
 </script>
 
 <!-- Hotjar Tracking Code for https://thomasking48.github.io/portfolio/ -->
