--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="HUBSPOT">
             <i class="fab fa-hubspot"></i>
           </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="GUTENBERG">
-            <i class="fab fa-gutenberg"></i>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="bottom" data-content="POWERPOINT">
+           <i class="fa-solid fa-file-powerpoint"></i>
           </li>
         </ul>
 
