--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               Past Work
             </h3>
               
-            <div class="line-mf"></div><br />
+            <div class="line-mf" style="color:#F2784B!important"></div><br />
               
 <div id="myBtnContainer">
   <button class="btn" onclick="filterSelection('all')"> Show all</button>
