--- a/index.html
+++ b/index.html
@@ -3253,7 +3253,7 @@
 </div>
     
 <!-- Return to Top -->
-<a href="javascript:" id="return-to-top"><i class="fa-solid fa-chevron-up"></i></a>
+<a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 <style>
 .slippery:hover {
       background-position: bottom center!important;
