Anitian Business Card

--- a/index.html
+++ b/index.html
@@ -2973,6 +2973,24 @@
 <div class="column other">
  <div class="content work-box">
    <div class="work-img">
+     <a href="img/other/Anitian-Business-Card.jpg" data-lightbox="other">
+      <img src="img/other/Anitian-Business-Card.jpg" alt="Portfolio - Thomas King" class="img-fluid">
+     </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Anitian Business Card</h4>
+       <p class="resume-tk"><script>document.write(filter5);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div> 
+    
+<div class="column other">
+ <div class="content work-box">
+   <div class="work-img">
      <a href="img/other/SOC-Podcast-mockup.png" data-lightbox="other">
       <img src="img/other/SOC-Podcast-mockup.png" alt="Portfolio - Thomas King" class="img-fluid">
      </a>
