--- a/index.html
+++ b/index.html
@@ -121,14 +121,17 @@
             <h3 class="mb-0">Webmaster & Sr. Digital Design Manager</h3>
             <div class="subheading mb-3">Phosphorus Cybersecurity</div>
               <ul>
-                  <li>Collaborated closely with the CMO to rebrand the company</li>
-                  <li>Created PowerPoint decks for Executive meetings, Investor calls, Board of Directors meetings, and Sales pitch decks. Created custom slides daily for executives and sales reps.</li>
-                  <li>Designed and developed a company website, including mega menu, product pages, company pages, banners, and a dynamic Resource Center and Global Device Network.</li>
-                  <li>Created infographics and graphics for blog posts</li>
-                  <li>Developed branding for Partner Program, including logo, webpage, and brochure</li>
-                  <li>Branded and designed assets for a new company podcast</li>
-                  <li>Designed sales plays, competitive matrix, competitive flashes, and other sales collateral</li>
-                  <li>Designed business cards, trade show booths, and event collateral</li>
+                  <li>Collaborated closely with the Chief Marketing Officer (CMO) to execute a comprehensive rebranding strategy for the company.
+<li>Collaborated with C-level executives, including the CEO, CFO, CPO, CMO, and President of WW Ops, to develop PowerPoint presentations tailored for executive meetings, investor calls, and Board of Directors meetings</li>
+<li>Consistently created custom slides for executives, sales representatives, and sales pitch decks</li>
+<li>Additionally, custom slides were designed for the CPO and CMO to enhance investor pitches and event pitch decks</li>
+<li>Designed and developed the company website, encompassing a comprehensive mega menu, product pages, company pages, banners, and a dynamic Resource Center and Global Device Network</li>
+<li>Crafted company collateral, including datasheets, white papers, brochures, case studies, and solution briefs</li>
+<li>Conceived infographics, social graphics, and banners for blog posts</li>
+<li>Developed branding elements for the Partner Program, including a logo, website, and brochure</li>
+<li>Brought to life the brand identity for a new company podcast through design and development</li>
+<li>Designed sales strategies, including sales plays, a competitive matrix, competitive flashes, and other sales collateral</li>
+<li>Crafted business cards, trade show booths, and event collateral</li>
               </ul>
           </div>
           <div class="resume-date text-md-right">
