--- a/index.html
+++ b/index.html
@@ -1815,6 +1815,24 @@
 <div class="column presentations">
  <div class="content work-box">
    <div class="work-img">
+      <a href="img/presentations/Anitian-Pitch.png" data-lightbox="presentations">
+       <img src="img/presentations/Anitian-Pitch.png" alt="Portfolio - Thomas King" class="img-fluid">
+      </a>
+      </div>
+<div class="work-content">
+      <div class="row col-sm-12">
+      <div class="resume-content">
+       <h4 class="resume-pre-tk">Anitian Pitch Deck</h4>
+       <p class="resume-tk"><script>document.write(filter6);</script></p>
+      </div>
+      </div>
+     </div>
+   </div>
+</div>
+    
+<div class="column presentations">
+ <div class="content work-box">
+   <div class="work-img">
       <a href="img/presentations/Anitian_Brand_Guidelines.png" data-lightbox="presentations">
        <img src="img/presentations/Anitian_Brand_Guidelines.png" alt="Portfolio - Thomas King" class="img-fluid">
       </a>
