--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   gtag('config', 'G-XPTMLP4SVR');
 </script>
 
-<!-- Hotjar Tracking Code for https://thomasking48.github.io/portfolio/ -->
+<!-- Hotjar Tracking Code for https://thomasmking48.github.io/portfolio/ -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -102,7 +102,7 @@
           <a href="https://www.behance.net/tomking3" target="_blank">
             <i class="fab fa-behance"></i>
           </a>
-          <a href="https://github.com/thomasking48" target="_blank">
+          <a href="https://github.com/thomasmking48" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
