Fixed header dark mode

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
       </span>
     </a>
       
+    <!-- Dark mode -->
+      <div class="switch-mobile">
+          <input type="checkbox" class="checkbox" id="checkbox">
+          <label for="checkbox" class="checkbox-label">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <span class="ball"></span>
+          </label>
+      </div>
+      
     <!-- Nav for mobile -->
        <button class="navbar-toggler collapsed border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -373,8 +383,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="work">
    
-
-  
+ 
 <!-- Portfolio Section -->
 <section id="work" class="portfolio-mf route">
   
