--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
     <span class="ball"></span>
   </label>
 </div></li>
+          <li><p style="color:#222222">Site last built on: {{ site.time | date: “%Y-%m-%d” }}</p></li>
       </ul>
     </div>
   </nav>
+    
+   
 
   <div class="container-fluid p-0">    
       
