--- a/index.html
+++ b/index.html
@@ -89,23 +89,22 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#work">Work</a>
+          <a class="nav-link js-scroll-trigger" href="#work">Work <i class="fa fa-angle-down"></i></a>
         </li>
           <li>
-<div class="switch">
-  <input type="checkbox" class="checkbox" id="checkbox">
-  <label for="checkbox" class="checkbox-label">
-    <i class="fas fa-moon"></i>
-    <i class="fas fa-sun"></i>
-    <span class="ball"></span>
-  </label>
-</div></li>
+              <div class="switch">
+                <input type="checkbox" class="checkbox" id="checkbox">
+                <label for="checkbox" class="checkbox-label">
+                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
+                <span class="ball"></span>
+                </label>
+              </div>
+          </li>
       </ul>
     </div>
   </nav>
     
-   
-
   <div class="container-fluid p-0">    
       
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
