--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#work">Work <i class="fa fa-angle-down"></i></a>
+          <a class="nav-link js-scroll-trigger" href="#work">Work </a>
         </li>
           <li>
               <div class="switch">
